comments and nord theme for tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,18 +1,29 @@
+#setting Ctrl A as prefix
 set -g prefix ^A
 
+# defining enumeration of windows and panels
 set -g base-index 1
 setw -g pane-base-index 1
 set -g renumber-windows on
 set -g detach-on-destroy off
+
+# 
 set -g set-clipboard on
+
+# enabling mouse
 set-option -g mouse on
+
+# bar at the top
 set-option -g status-position top
 
-bind-key a set-window-option synchronize-panes\ #display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
- 
+# 
+bind-key a set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
+
+# plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin "nordtheme/tmux"
 
 run '~/.tmux/plugins/tpm/tpm'
